[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrockcache"
version = "0.1.0"
description = "Audit and fix Anthropic prompt caching on AWS Bedrock through any abstraction stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = ["bedrock", "anthropic", "claude", "prompt-caching", "aws", "litellm", "strands"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/bedrockcache"
Issues = "https://github.com/MukundaKatta/bedrockcache/issues"
Repository = "https://github.com/MukundaKatta/bedrockcache"

[project.scripts]
bedrockcache = "bedrockcache.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrockcache"]

[tool.hatch.build.targets.sdist]
include = [
    "src/bedrockcache",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    ".github/workflows",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
